testdata/baselines/reference/submodule/compiler/parseJsxElementInUnaryExpressionNoCrash3.errors.txt
a.js(1,2): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
a.js(1,2): error TS2872: This kind of expression is always truthy.
a.js(1,3): error TS17008: JSX element '' has no corresponding closing tag.
a.js(1,4): error TS1003: Identifier expected.
a.js(1,5): error TS1005: '...' expected.
a.js(3,1): error TS1005: '</' expected.


==== a.js (6 errors) ====
    !< {:>
     ~~~~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
     ~~~~~
      
!!! error TS17008: JSX element '' has no corresponding closing tag.
       ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1005: '...' expected.
    
    
    
    
!!! error TS2872: This kind of expression is always truthy.
    
!!! error TS1005: '</' expected.